assignment5-5
c.cpp:22:32: error: no matching function for call to 'mid'
    cout << "Mid point is " << mid(a.x,b.y,a1.x,b1.y);
                               ^~~
c.cpp:10:6: note: candidate function not viable: no known conversion from 'int'
      to 'Point &' for 1st argument
void mid(Point& A, Point& B,Point& C, Point& D);
     ^


#include <iostream>
#include <cmath>
using namespace std;

struct Point 
{
    int x, y;
};

void mid(Point& A, Point& B,Point& C, Point& D);

int main()
{	
    Point a,b,a1,b1;
    char ok;

    cout <<"Enter 1st point (x,y): " ;
    cin >> a.x >> b.x;
    cout <<"Enter 2nd point (x,y): " ;
    cin >> a1.x >> b1.y;
    
    cout << "Mid point is " << mid(a.x,b.y,a1.x,b1.y);

    cout <<"Continue ? ";
    while (ok == 'y')
    {
    cout <<"Enter 1st point (x,y): " ;
    cin >> a.x >> b.x;
    cout <<"Enter 2nd point (x,y): " ;
    cin >> a1.y >> b1.y;}

	return 0;
}
void mid(Point& A, Point& B,Point& C, Point& D)
{
    double pointx = (A.x+C.x)/2;
    double pointy = (B.y+D.y)/2;
    double midPoint = pointx + pointy;
}
